--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <h3>Частина 1</h3>
 <hr>
 <ol >
-<li><b>bВступ. Структура програми. Змінні. Типи даних</b>
+<li><b>Вступ. Структура програми. Змінні. Типи даних</b>
 <ul>
 <li><a href="https://youtu.be/JTWTJDwr-KY">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/12aUy6lYeWIe8LpylJvgn-RhEJCqSwQX0EWwpRm5FQ18/edit?usp=sharing">Презентація</a>
