--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <li><b>Підсумки 1 частини </b>
 <ul>
 <li><a href="https://youtu.be/hxyqHsNB3Ps">Відео</a>
-<li><a href+https://docs.google.com/presentation/d/1gJhrMK4KQmzmSPpazdOp9YKxHICmEM8Hy3bq6e0sqwY/edit?usp=sharing+>Презентація</a>
+<li><a href=https://docs.google.com/presentation/d/1gJhrMK4KQmzmSPpazdOp9YKxHICmEM8Hy3bq6e0sqwY/edit?usp=sharing+>Презентація</a>
 <li><a href="https://forms.gle/MmwaMxX2EUn29vG27">Тест</a>
 </ul>
 <ol>
