--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
 <li><a href="https://youtu.be/_juye7GizRA">Перевантаження функцій</a>
 <li><a href=https://docs.google.com/presentation/d/1wWRK_ffztSwM7DhtLjUh0voHwtT8OClca7z6bL_PAjU/edit?usp=sharing>Презентація до перевантаження функцій</a>
 <li><a href="https://forms.gle/D5kwTPeWRNQ6vftZA">Тест</a>
-
 </ul>
 <li><b>Базові алгоритми </m>
 <ul>
@@ -58,7 +57,40 @@
 <ul>
 <li><a href="https://youtu.be/hxyqHsNB3Ps">Відео</a>
 <li><a href=https://docs.google.com/presentation/d/1gJhrMK4KQmzmSPpazdOp9YKxHICmEM8Hy3bq6e0sqwY/edit?usp=sharing+>Презентація</a>
-<li><a href="https://forms.gle/MmwaMxX2EUn29vG27">Тест</a>
 </ul>
+<hr>
+<b> ЧАстина 2
+<li><b>Масиви
+<ul>
+<li><a href="https://youtu.be/AdbVMMi7E8o">Відео</a>
+<li><a href="https://docs.google.com/presentation/d/15XC1ZWZDu2DEeenGUsy8VW96T71djpgvq8DjmxE8zec/edit?usp=sharing">Презентація </a>
+<li><a href="https://docs.google.com/forms/d/1xEYim7p549L4uEGQkzCrRFVSEyPISHUtpZ29OfDzKAU/edit?usp=sharing">Тест </a>
+<li><a href="https://youtu.be/AxAvqqTYSYU">Двовимірні масиви</a>
+<li><a href="https://docs.google.com/presentation/d/1r7OZwFxq4g4uNGQU81ZS-NljsI4xvA5tIkJgal3Ke1M/edit?usp=sharing">Презентація до двомірних масивів</a>
+<li><a href="https://youtu.be/dZg7sYuafFs"> Масиви практика</a>
+<li><a href="https://docs.google.com/presentation/d/1DT6xvgf0Awcq50LhCqWAvgTrJMrmMxjvWUqBIbaV_-I/edit?usp=sharing">Презентація до Практики по масивах</a>
+</ul>
+<li><b>Символи та рядки
+<ul>
+<li><a href="https://youtu.be/Gyhu-ARduz8">Відео</a>
+<li><a href="https://docs.google.com/presentation/d/1LuzXUZZNOHLjERgRBR9bOb3CmZgewAhzb60SPGtBSxc/edit?usp=sharing">Презентація </a>
+<li><a href="https://docs.google.com/forms/d/1DMAg7Rec6J_lDZf8rzppq0lSKCY9D5FYLZ40HFPBvjI/edit?usp=sharing ">Тест</a>
+</ul>
+<li><b>Вказівники
+<ul>
+<li><a href="https://youtu.be/ECPbdhIoIKk">Відео</a>
+<li><a href="https://docs.google.com/presentation/d/1LGLE3dU94o5fXrXAQOX6lYz15WyU28xF5AWueACRWhY/edit?usp=sharing">Презентація</a>
+</ul>
+<li><b>Файли
+<ul>
+<li><a href="https://youtu.be/l9CxAW1bw_Y">Відео</a>
+<li><a href="https://docs.google.com/presentation/d/1KbYjNtdhh6QI5fn1ErKNjwbe8OykduFDdajNf5EsHIk/edit?usp=sharing">Презентація</a>
+</ul>
+<li><b>Підсумки 2 частини </b>
+<ul>
+<a href="https://docs.google.com/presentation/d/1u9svLiDyutTsCm-F10gcMMX3XP5foIPFNr2TuuFiU7w/edit?usp=sharing">Презентація
+<hr>
+
+
 <ol>
 <hr>
