--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
 <li><a href="https://youtu.be/hxyqHsNB3Ps">Відео</a>
 <li><a href=https://docs.google.com/presentation/d/1gJhrMK4KQmzmSPpazdOp9YKxHICmEM8Hy3bq6e0sqwY/edit?usp=sharing+>Презентація</a>
 </ul>
+<br>
+<b> Частина 2
 <hr>
-<b> ЧАстина 2
 <li><b>Масиви
 <ul>
 <li><a href="https://youtu.be/AdbVMMi7E8o">Відео</a>
@@ -86,11 +87,11 @@
 <li><a href="https://youtu.be/l9CxAW1bw_Y">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/1KbYjNtdhh6QI5fn1ErKNjwbe8OykduFDdajNf5EsHIk/edit?usp=sharing">Презентація</a>
 </ul>
+<br>
 <li><b>Підсумки 2 частини </b>
 <ul>
 <a href="https://docs.google.com/presentation/d/1u9svLiDyutTsCm-F10gcMMX3XP5foIPFNr2TuuFiU7w/edit?usp=sharing">Презентація
 <hr>
-
 
 <ol>
 <hr>
