--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <li><b>Бібліотеки</n>
 <ul>
 <li><a href="https://youtu.be/jv7dORuvdxo">Відео</a>
-<li><"https://docs.google.com/presentation/d/1s-QU1y1PtIVntOlTT1aPly9vA8iR-Gw_Nn9o96C4NzM/edit?usp=sharing">Презентація</a>
+<li><a href="https://docs.google.com/presentation/d/1s-QU1y1PtIVntOlTT1aPly9vA8iR-Gw_Nn9o96C4NzM/edit?usp=sharing">Презентація</a>
 </ul>
 
 <li><b>Функції </b>
