--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <ol >
 <li><b>Вступ. Структура програми. Змінні. Типи даних</b>
 <ul>
+<li><a href="https://drive.google.com/file/d/1nLmRdYD6_ZjX5fWTT4GwFDUrAohSCu3O/view?usp=sharing">Текст</a>
 <li><a href="https://youtu.be/JTWTJDwr-KY">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/12aUy6lYeWIe8LpylJvgn-RhEJCqSwQX0EWwpRm5FQ18/edit?usp=sharing">Презентація</a>
 <li><a href="https://forms.gle/Mv9o7k6Ceae865Cx6">Тест</a>
@@ -11,6 +12,7 @@
 
 <li><b>Введення- виведення. Арифметичні дії</b>
 <ul>
+<li><a href="https://drive.google.com/file/d/1oCSQUKefgyeBYh-rId4y7jicWKQk1tEz/view?usp=sharing">Текст</a>
 <li><a href="https://youtu.be/X9trA7p5NJA">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/1Bu32DfY1M20XQp24sVMxmgdievvBAAYMYkBzdOyzU8U/edit?usp=sharing">Презентація</a>
 <li><a href="https://forms.gle/xkMFrdzofMYiXQe96">Тест</a>
@@ -18,6 +20,7 @@
 
 <li><b>Умови</b>
 <ul>
+<li><a href="https://drive.google.com/file/d/1I5fRbvVAp0lN0iEXsUuCae7HQH2W9zY6/view?usp=sharing">Текст</a>
 <li><a href="https://youtu.be/2y-Xymy8ly4">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/1Q6yrazv5wwCbjFLvSRB9CMGc6bSDRoRF_YWl9hgNCsg/edit?usp=sharing">Презентація</a>
 <li><a href="https://youtu.be/v1KT-vrSwxE">Практика</a>
@@ -27,6 +30,7 @@
 
 <li><b>Цикли </b>
 <ul>
+<li><a href="https://drive.google.com/file/d/1LJgEE0wgN3Qus4BxrOnnZPRpe94bmVSZ/view?usp=sharing">Текст</a>
 <li><a href="https://youtu.be/Tyi-dh7x6JM">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/1Axjf0HS9xsjDqq7pj1P-K8tdSpa3nWVT14zAQDpZey8/edit?usp=sharing">Презентація</a>
 <li><a href="https://youtu.be/SiEaeExSgeI">Практика</a>
@@ -36,20 +40,24 @@
 
 <li><b>Бібліотеки</n>
 <ul>
+<li><a href="https://drive.google.com/file/d/1JkYDIf5z48QxIIgqp29EFA47oGeLu2BJ/view?usp=sharing">Текст</a>
 <li><a href="https://youtu.be/jv7dORuvdxo">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/1s-QU1y1PtIVntOlTT1aPly9vA8iR-Gw_Nn9o96C4NzM/edit?usp=sharing">Презентація</a>
 </ul>
 
 <li><b>Функції </b>
 <ul>
+<li><a href="https://drive.google.com/file/d/1-uusTYzR3HeyG7x20_Ap0O8BIYVbRnE_/view?usp=sharing">Текст</a>
 <li><a href="https://youtu.be/y1wiDi37YjQ">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/1SZS8lMFNxW6YmutCa1HBjQ5RZGCjcrgl6czAnBCz1U0/edit?usp=sharing">Презентація</a>
 <li><a href="https://youtu.be/_juye7GizRA">Перевантаження функцій</a>
 <li><a href=https://docs.google.com/presentation/d/1wWRK_ffztSwM7DhtLjUh0voHwtT8OClca7z6bL_PAjU/edit?usp=sharing>Презентація до перевантаження функцій</a>
 <li><a href="https://forms.gle/D5kwTPeWRNQ6vftZA">Тест</a>
 </ul>
+
 <li><b>Базові алгоритми </m>
 <ul>
+<li><a href="https://drive.google.com/file/d/1VDCiD9GzTOrOQu4zchQi_W7NhVBBYvvd/view?usp=sharing">Текст</a>
 <li><a href="https://youtu.be/HkWwAA6Srt4">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/1nEtWEBxpthKAkNHALniLyevLZiLFHFE8gFrcVnX6q94/edit?usp=sharing">Презентація</a>
 </ul>
@@ -63,6 +71,7 @@
 <hr>
 <li><b>Масиви
 <ul>
+<li><a href="https://drive.google.com/file/d/10Bq3Vji_fu8bGow7QMr6W2jX-to1K4XS/view?usp=sharing">Текст</a>
 <li><a href="https://youtu.be/AdbVMMi7E8o">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/15XC1ZWZDu2DEeenGUsy8VW96T71djpgvq8DjmxE8zec/edit?usp=sharing">Презентація </a>
 <li><a href="https://docs.google.com/forms/d/1xEYim7p549L4uEGQkzCrRFVSEyPISHUtpZ29OfDzKAU/edit?usp=sharing">Тест </a>
@@ -73,21 +82,39 @@
 </ul>
 <li><b>Символи та рядки
 <ul>
+<li><a href="https://drive.google.com/file/d/1RB6JBEaDg8urh7IGX09RZJcy6jkaYXqz/view?usp=sharing">Текст</a>
 <li><a href="https://youtu.be/Gyhu-ARduz8">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/1LuzXUZZNOHLjERgRBR9bOb3CmZgewAhzb60SPGtBSxc/edit?usp=sharing">Презентація </a>
 <li><a href="https://docs.google.com/forms/d/1DMAg7Rec6J_lDZf8rzppq0lSKCY9D5FYLZ40HFPBvjI/edit?usp=sharing ">Тест</a>
 </ul>
 <li><b>Вказівники
 <ul>
+<li><a href="https://drive.google.com/file/d/1H8PGV_6LovLh7Bz8w9UiLbN3t3i7h-DF/view?usp=sharing">Текст</a>
 <li><a href="https://youtu.be/ECPbdhIoIKk">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/1LGLE3dU94o5fXrXAQOX6lYz15WyU28xF5AWueACRWhY/edit?usp=sharing">Презентація</a>
 </ul>
 <li><b>Файли
 <ul>
+<li><a href="https://drive.google.com/file/d/1OXaR6cUo4e41TVGZwjzs9UitNfjrEuJH/view?usp=sharing">Текст</a>
 <li><a href="https://youtu.be/l9CxAW1bw_Y">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/1KbYjNtdhh6QI5fn1ErKNjwbe8OykduFDdajNf5EsHIk/edit?usp=sharing">Презентація</a>
 </ul>
+<li><b>Структури
+<ul>
+<li><a href="https://drive.google.com/file/d/17jaWFsQ6BMyrTXCQMHvUuysrTlcbkuW-/view?usp=sharing">Текст</a>
+<li><a href="">Відео</a>
+<li><a href="">Презентація</a>
+</ul>
+
+<li><b>STL бібліотека
+<ul>
+<li><a href="https://drive.google.com/file/d/1t1fUnrZFrAfnB4aUxxxU3bMMuWTb__XB/view?usp=sharing">Текст</a>
+<li><a href="">Відео</a>
+<li><a href="">Презентація</a>
+</ul>
+
 <br>
+
 <li><b>Підсумки 2 частини </b>
 <ul>
 <a href="https://docs.google.com/presentation/d/1u9svLiDyutTsCm-F10gcMMX3XP5foIPFNr2TuuFiU7w/edit?usp=sharing">Презентація
