--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>Курс "Програмування на мові С++"</h1>
+<h1>Курс "Програмування на мові С++. Структурний підхід"</h1>
 <h3>Частина 1</h3>
 <hr>
 <ol >
