--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <li><a href="https://youtu.be/Tyi-dh7x6JM">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/1Axjf0HS9xsjDqq7pj1P-K8tdSpa3nWVT14zAQDpZey8/edit?usp=sharing">Презентація</a>
 <li><a href="https://youtu.be/SiEaeExSgeI">Практика</a>
-<li><a href="https://docs.google.com/presentation/d/1lt4ji_qLeqp7fFl9xjTEim2krsx2K-Is0tacjYTxG-w/edit?usp=sharing">Презентацыя до практики</a>
+<li><a href="https://docs.google.com/presentation/d/1lt4ji_qLeqp7fFl9xjTEim2krsx2K-Is0tacjYTxG-w/edit?usp=sharing">Презентація до практики</a>
 <li><a href="https://forms.gle/h95DNAzzcpZQkC9s8">Тест</a>
 </ul>
 
