--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <li><a href="https://youtu.be/2y-Xymy8ly4">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/1Q6yrazv5wwCbjFLvSRB9CMGc6bSDRoRF_YWl9hgNCsg/edit?usp=sharing">Презентація</a>
 <li><a href="https://youtu.be/v1KT-vrSwxE">Практика</a>
-<li><a href="https://docs.google.com/presentation/d/11FQ6FdAmSwxmf3BAFCyiN-UCuXbP7MX4P6P-Wj7Z-Xo/edit?usp=sharing">Презентацыя до практики </a>
+<li><a href="https://docs.google.com/presentation/d/11FQ6FdAmSwxmf3BAFCyiN-UCuXbP7MX4P6P-Wj7Z-Xo/edit?usp=sharing">Презентація до практики </a>
 <li><a href="https://forms.gle/F1FAfSNXE38SY2cm6">Тест</a>
 </ul>
 
