--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <li><a href="https://forms.gle/h95DNAzzcpZQkC9s8">Тест</a>
 </ul>
 
-<li><b>Бібліотеки</n>
+<li><b>Бібліотеки</b>
 <ul>
 <li><a href="https://drive.google.com/file/d/1JkYDIf5z48QxIIgqp29EFA47oGeLu2BJ/view?usp=sharing">Текст</a>
 <li><a href="https://youtu.be/jv7dORuvdxo">Відео</a>
@@ -55,7 +55,7 @@
 <li><a href="https://forms.gle/D5kwTPeWRNQ6vftZA">Тест</a>
 </ul>
 
-<li><b>Базові алгоритми </m>
+<li><b>Базові алгоритми </b>
 <ul>
 <li><a href="https://drive.google.com/file/d/1VDCiD9GzTOrOQu4zchQi_W7NhVBBYvvd/view?usp=sharing">Текст</a>
 <li><a href="https://youtu.be/HkWwAA6Srt4">Відео</a>
@@ -67,9 +67,9 @@
 <li><a href=https://docs.google.com/presentation/d/1gJhrMK4KQmzmSPpazdOp9YKxHICmEM8Hy3bq6e0sqwY/edit?usp=sharing+>Презентація</a>
 </ul>
 <br>
-<b> Частина 2
+<b> Частина 2</b>
 <hr>
-<li><b>Масиви
+<li><b>Масиви</b>
 <ul>
 <li><a href="https://drive.google.com/file/d/10Bq3Vji_fu8bGow7QMr6W2jX-to1K4XS/view?usp=sharing">Текст</a>
 <li><a href="https://youtu.be/AdbVMMi7E8o">Відео</a>
@@ -80,33 +80,33 @@
 <li><a href="https://youtu.be/dZg7sYuafFs"> Масиви практика</a>
 <li><a href="https://docs.google.com/presentation/d/1DT6xvgf0Awcq50LhCqWAvgTrJMrmMxjvWUqBIbaV_-I/edit?usp=sharing">Презентація до Практики по масивах</a>
 </ul>
-<li><b>Символи та рядки
+<li><b>Символи та рядки</b>
 <ul>
 <li><a href="https://drive.google.com/file/d/1RB6JBEaDg8urh7IGX09RZJcy6jkaYXqz/view?usp=sharing">Текст</a>
 <li><a href="https://youtu.be/Gyhu-ARduz8">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/1LuzXUZZNOHLjERgRBR9bOb3CmZgewAhzb60SPGtBSxc/edit?usp=sharing">Презентація </a>
 <li><a href="https://docs.google.com/forms/d/1DMAg7Rec6J_lDZf8rzppq0lSKCY9D5FYLZ40HFPBvjI/edit?usp=sharing ">Тест</a>
 </ul>
-<li><b>Вказівники
+<li><b>Вказівники</b>
 <ul>
 <li><a href="https://drive.google.com/file/d/1H8PGV_6LovLh7Bz8w9UiLbN3t3i7h-DF/view?usp=sharing">Текст</a>
 <li><a href="https://youtu.be/ECPbdhIoIKk">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/1LGLE3dU94o5fXrXAQOX6lYz15WyU28xF5AWueACRWhY/edit?usp=sharing">Презентація</a>
 </ul>
-<li><b>Файли
+<li><b>Файли</b>
 <ul>
 <li><a href="https://drive.google.com/file/d/1OXaR6cUo4e41TVGZwjzs9UitNfjrEuJH/view?usp=sharing">Текст</a>
 <li><a href="https://youtu.be/l9CxAW1bw_Y">Відео</a>
 <li><a href="https://docs.google.com/presentation/d/1KbYjNtdhh6QI5fn1ErKNjwbe8OykduFDdajNf5EsHIk/edit?usp=sharing">Презентація</a>
 </ul>
-<li><b>Структури
+<li><b>Структури</b>
 <ul>
 <li><a href="https://drive.google.com/file/d/17jaWFsQ6BMyrTXCQMHvUuysrTlcbkuW-/view?usp=sharing">Текст</a>
 <li><a href="">Відео</a>
 <li><a href="">Презентація</a>
 </ul>
 
-<li><b>STL бібліотека
+<li><b>STL бібліотека</b>
 <ul>
 <li><a href="https://drive.google.com/file/d/1t1fUnrZFrAfnB4aUxxxU3bMMuWTb__XB/view?usp=sharing">Текст</a>
 <li><a href="">Відео</a>
